--- a/config.yaml
+++ b/config.yaml
@@ -2,14 +2,16 @@
 'base_dir': "" #The path of directory including img,pcd,out folders.
 ###### Parameters for corner detection from images
 'image_res': (4000,8000) #image resolution for panoramic image only
-'backend': 'matlab' #backend of detecting corners from the image, "matlab" or "opencv"
+'backend': 'opencv' #backend of detecting corners from the image, "matlab" or "opencv"
 'output_img_with_dectected_corners': True #output the image with detected corners
 'back_proj_corners': True #back-project the detected corners of the point cloud to the images
 'camera_type': 'perspective' #camera model: 'panoramic' or 'perspective'
-'instrinsic_para': (166.87739756, 0., 311.29512622,  0., 334.91696616, 781.89612824,   0., 0., 1.)
+'instrinsic_para': (2408.59, 0, 2051.68, 0, 2408.04, 1108.89, 0, 0, 1)
 # intrinsic parameters are necessary for perspective cameras (1,2,3,4,5,6,7,8,9)→　[1,2,3
 #                                                                                   4,5,6
 #                                                                                   7,8,9]
+'distortion_coeffs': (-0.166059, 0.110177, 0.000554372, -0.000439411, -0.0164908)
+# distortion coefficinets (k1, k2, p1, p2, k3)
 
 ###### Parameters for segmenting the point cloud
 'file_name_digits': 4 #filename format
@@ -23,13 +25,13 @@
 'pattern_size': (6,8)  #number of vertical and horizontal patterns
 'grid_length': 0.075 #the length of one grid of the pattern [m]
 'chessboard_detect_planar_PCA_ratio': 0.01 # The threshold of the planarity check of the potential chessboard with PCA
-'marker_range_limit': 5 #The farthest range of the chessboard for filtering irrelative segments. Segments whose centroid to Velodyne farther that this threshold will not be considered as a potential chessboard.
+'marker_range_limit': 15 #The farthest range of the chessboard for filtering irrelative segments. Segments whose centroid to Velodyne farther that this threshold will not be considered as a potential chessboard.
 
 ######## Parameters for 3D corner detection from detected chessboard point cloud segment
-'start_pattern_corner': 0 #The color of the pattern in the left down of the chessboard and 0 for black  1 for white
-'intensity_col_ind': 3 # The index of intensity column (counting starts from 0). !!! Wrong number will cause the failure of corner detection in pcd files.
+'start_pattern_corner': 1 #The color of the pattern in the left down of the chessboard and 0 for black  1 for white
+'intensity_col_ind': 6 # The index of intensity column (counting starts from 0). !!! Wrong number will cause the failure of corner detection in pcd files.
 
 ######### Settings for multi-processing
 'multi_proc': True #Use multiple processing
-'proc_num': 4 #The number of cores to use for multiple processing
-'poses_num': 20 #The number of image-laserscan pairs 
+'proc_num': 3 #The number of cores to use for multiple processing
+'poses_num': 3 #The number of image-laserscan pairs 
